# basedpyright-nix

./: README.md  flake.nix
nodejs-bin/: default.nix
nodejs-bin/src/: LICENSE  pyproject.toml
nodejs-bin/src/nodejs/: __init__.py  __main__.py  corepack.py  node.py  npm.py  npx.py
